stackslib/src/chainstate/tests/snapshots/blockstack_lib__chainstate__tests__consensus__successfully_deploy.snap
---
source: stackslib/src/chainstate/tests/consensus.rs
expression: result.get_expected_results()
---
[
  Success(ExpectedBlockOutput(
    marf_hash: "70512417d0bb52c1038e356d15408514bfcafaa1a1e2862f1e2bc238fb29d95b",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: foo_contract-Epoch3_4-Clarity1, code_body: [..], clarity_version: Some(Clarity1))",
        vm_error: "None [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: true,
          data: Bool(true),
        )),
        cost: ExecutionCost(
          write_length: 121,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 11968,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 121,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 11968,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "9fba8dd46f73e5f63d1b4b3b2a56a3ac65f1a76debfd10a78a7b5dbf6a4f8f9b",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: foo_contract-Epoch3_4-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "None [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: true,
          data: Bool(true),
        )),
        cost: ExecutionCost(
          write_length: 121,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 11968,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 121,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 11968,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "1c63e1d89fed8197ed8b5b74c11acfc5c3c02acf4127edbaba08036e837fb857",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: foo_contract-Epoch3_4-Clarity3, code_body: [..], clarity_version: Some(Clarity3))",
        vm_error: "None [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: true,
          data: Bool(true),
        )),
        cost: ExecutionCost(
          write_length: 121,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 11968,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 121,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 11968,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "1725b1871b03e199a4b377e09cafa08146fd74fb4017a0273e001278796266d5",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: foo_contract-Epoch3_4-Clarity4, code_body: [..], clarity_version: Some(Clarity4))",
        vm_error: "None [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: true,
          data: Bool(true),
        )),
        cost: ExecutionCost(
          write_length: 121,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 11968,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 121,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 11968,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "4e3863495dc3139a549285143e8d8005c6dd383528541f2c8f863a8437a8b667",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: foo_contract-Epoch3_4-Clarity5, code_body: [..], clarity_version: Some(Clarity5))",
        vm_error: "None [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: true,
          data: Bool(true),
        )),
        cost: ExecutionCost(
          write_length: 121,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 11968,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 121,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 11968,
    ),
  )),
]
